# Robotics-

./: .clang-format  .gitignore  .pre-commit-config.yaml  ASSIGNMENT_PLAN.md  CHANGELOG.md  Dockerfile  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci.yml  lint.yml
docker/: Dockerfile.ci  Dockerfile.dev  docker-compose.yml  entrypoint.sh
docs/: TEST_REPORT.md  algorithms.md  design_decisions.md  obstacle_avoidance_extension.md  real_robot_extension.md
scripts/: generate_demo_poster.py  generate_demo_video.py  generate_plots.py  record_bag.sh  run_tests.sh  setup_workspace.sh  visualize_trajectory.py
src/smooth_nav_bringup/: CMakeLists.txt  package.xml
src/smooth_nav_bringup/config/: waypoints.yaml
src/smooth_nav_bringup/launch/: demo.launch.py  smooth_nav.launch.py
src/smooth_nav_bringup/smooth_nav_bringup/: __init__.py  safety_watchdog_node.py  waypoint_client_node.py
src/smooth_nav_controller/: CMakeLists.txt  package.xml
src/smooth_nav_controller/config/: controller.yaml
src/smooth_nav_controller/launch/: controller.launch.py
src/smooth_nav_controller/src/: trajectory_tracker_node.cpp
src/smooth_nav_core/: CMakeLists.txt  package.xml
src/smooth_nav_core/include/smooth_nav_core/controller/: controller_state.hpp  i_controller.hpp  pid_controller.hpp  pure_pursuit_controller.hpp
src/smooth_nav_core/include/smooth_nav_core/math/: geometry_utils.hpp  spline_math.hpp  types.hpp
src/smooth_nav_core/include/smooth_nav_core/path_smoother/: bspline_smoother.hpp  cubic_spline_smoother.hpp  i_path_smoother.hpp  smoother_factory.hpp
src/smooth_nav_core/include/smooth_nav_core/trajectory_generator/: constant_velocity_generator.hpp  i_trajectory_generator.hpp  trajectory_utils.hpp  trapezoidal_velocity_generator.hpp
src/smooth_nav_core/src/controller/: pure_pursuit_controller.cpp
src/smooth_nav_core/src/path_smoother/: bspline_smoother.cpp  cubic_spline_smoother.cpp
src/smooth_nav_core/src/trajectory_generator/: constant_velocity_generator.cpp  trapezoidal_velocity_generator.cpp
src/smooth_nav_core/test/fixtures/: sample_waypoints.hpp  trajectory_validator.hpp
src/smooth_nav_core/test/unit/: test_cubic_spline.cpp  test_geometry_utils.cpp  test_pid_controller.cpp  test_pure_pursuit.cpp  test_trapezoidal_velocity.cpp
src/smooth_nav_description/: CMakeLists.txt  package.xml
src/smooth_nav_description/launch/: display.launch.py
src/smooth_nav_description/meshes/: README.md
src/smooth_nav_description/rviz/: smooth_nav.rviz
src/smooth_nav_description/urdf/: turtlebot3_burger.urdf
src/smooth_nav_msgs/: CMakeLists.txt  package.xml
src/smooth_nav_msgs/action/: ExecuteTrajectory.action
src/smooth_nav_msgs/msg/: ControllerDiagnostics.msg  SmoothedPath.msg  Trajectory.msg  TrajectoryPoint.msg  Waypoint.msg  WaypointArray.msg
src/smooth_nav_msgs/srv/: GenerateTrajectory.srv  SmoothPath.srv
src/smooth_nav_ros/: CMakeLists.txt  package.xml
src/smooth_nav_ros/config/: smooth_nav_ros.yaml
src/smooth_nav_ros/launch/: smooth_nav_ros.launch.py
src/smooth_nav_ros/src/: path_smoother_node.cpp  trajectory_generator_node.cpp
src/smooth_nav_simulation/: CMakeLists.txt  package.xml
src/smooth_nav_simulation/config/: gazebo.yaml
src/smooth_nav_simulation/launch/: gazebo.launch.py
src/smooth_nav_simulation/worlds/: empty_world.sdf  obstacle_world.sdf
src/smooth_nav_tests/: CMakeLists.txt  package.xml
src/smooth_nav_tests/test/integration/: test_generator_service.cpp  test_smoother_service.cpp  test_tracker_action.cpp
src/smooth_nav_tests/test/system/: test_full_pipeline.launch.py
src/trajectory_control/: CMakeLists.txt  package.xml
src/trajectory_control/config/: controller_params.yaml  trajectory.rviz  waypoints.yaml
src/trajectory_control/include/trajectory_control/: path_smoother.hpp  trajectory_controller.hpp  trajectory_generator.hpp  types.hpp
src/trajectory_control/launch/: simulation.launch.py  trajectory_demo.launch.py
src/trajectory_control/scripts/: plot_trajectory.py  waypoint_publisher.py
src/trajectory_control/src/: path_smoother.cpp  trajectory_controller.cpp  trajectory_generator.cpp  trajectory_node.cpp
src/trajectory_control/test/: test_controller.cpp  test_path_smoother.cpp  test_trajectory_generator.cpp
src/trajectory_control/worlds/: obstacle_world.sdf
