<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smooth_nav_core</name>
  <version>1.0.0</version>
  <description>
    Pure C++17 algorithm library — path smoothing, trajectory generation, and control.
    Zero ROS dependencies. Testable with plain cmake + gtest.
  </description>
  <maintainer email="student@university.edu">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- NO ROS dependencies — this is intentional -->

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
