<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smooth_nav_tests</name>
  <version>1.0.0</version>
  <description>
    System-level and integration tests for the smooth_nav pipeline.
    Tests the full ROS2 graph: service calls, action execution, topic flow.
  </description>
  <maintainer email="student@university.edu">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>smooth_nav_msgs</depend>
  <depend>smooth_nav_ros</depend>
  <depend>smooth_nav_controller</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
